--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postcss": "^8.4.49",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
     "tailwind": "^4.0.0"
